--- a/Template For Import/Hook-DCM-Template.html
+++ b/Template For Import/Hook-DCM-Template.html
@@ -11,6 +11,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="authoring-tool" content="$VERSION">
 <meta name="ad.size" content="width=$WT,height=$HT">
 <title>$TITLE</title>
